--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap-icons": "^1.8.3",
     "react": "^18.1.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-bootstrap-icons": "^1.8.2",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
