--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
     "redux": "^4.2.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
